--- a/styles/main.css
+++ b/styles/main.css
@@ -251,6 +251,7 @@ main {
 
 .box-aboutGbo__itemText {
   width: 100%;
+  margin-top: 3%;
   border: 1px solid #000;
   color: #424242;
 }
@@ -290,4 +291,86 @@ main {
 .footerImg {
   width: 100%;
   margin-top: 5%;
+}
+
+.box-avtoModdel__mainPhrase {
+  font-size: 26px;
+  text-align: center;
+  color: #303945;
+}
+
+.box-avtoModdel {
+  width: 100%;
+}
+
+.box-avtoModdel__img {
+  width: 300px;
+  height: 200px;
+  margin-top: 5%;
+  background-color: #e6e6e6;
+}
+
+.box-avtoModdel__name {
+  text-align: center;
+  font-size: 16px;
+  color: #000;
+}
+
+.box-gboInfo {
+  width: 100%;
+  border: 1px solid black;
+}
+
+.box-gboInfo_item {
+  width: 100%;
+  margin-top: 2%;
+  border: 1px solid red;
+}
+
+.box-gboInfo_img {
+  float: left;
+  margin: 0.5%;
+  display: block;
+}
+
+.box-gboInfo__price {
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+  margin: 1%;
+}
+
+.prace-gbo__uah {
+  padding: 0 2%;
+}
+
+.prace-gbo__uah:after {
+  content: "\20B4";
+}
+
+.prace-gbo__uah:before {
+  content: "\2248 ";
+}
+
+.prace-gbo__euro {
+  padding: 0 2%;
+}
+
+.prace-gbo__euro:after {
+  content: "\20AC";
+}
+
+.box-gboInfo_text {
+  width: 100%;
+  height: 100%;
+  font-size: 14px;
+  color: #000;
+}
+
+.box-navigationInfo {
+  border: 1px solid red;
+  width: 100%;
+  height: 200px;
+  margin-top: 1%;
+  color: #000;
 }
