--- a/styles/main.scss
+++ b/styles/main.scss
@@ -327,11 +327,14 @@ main {
 .box-sliderOne__items {
   width: 100%;
   height: 300px;
+  background-size:cover;
 }
 
 .box-sliderOne__item {
+  position: relative;
   width: 100%;
-  height: 300px;
+  max-height: 200px;      ////* подогнать под минимальную высоту фотки*/
+  background-size:cover;  ////
   overflow: hidden;
 }
 
@@ -376,19 +379,20 @@ main {
 
 .box-gboInfo {
   width: 100%;
-  border: 1px solid black;
+  //border: 1px solid black;
 }
 
 .box-gboInfo_item {
   width: 100%;
   //height: 150px;
   margin-top: 2%;
-  border: 1px solid red;
+  border: 1px solid #000;
 }
 
 .box-gboInfo_img {
   float: left;
-  margin: 0.5%;
+  min-width: 200px;    /// подогнать под максимальную ширину размер фото
+  padding: 0.5%;
   display: block;
   //border: 1px solid red;
 }
@@ -421,18 +425,23 @@ main {
 }
 
 .box-gboInfo_text {
-  //display: block;
-  width: 100%;
+  //border: 1px solid red;
+  display: block;
+  //width: 10%;
+  word-wrap: break-word;
   height: 100%;
+  padding-right: 1%;
+
+
   //display: inline-block;
-  font-size: 14px;
+  font-size: 16px;
   color: #000;
 }
 
 ////////
 
 .box-navigationInfo {
-  border: 1px solid red;
+  border: 1px solid black;
   width: 100%;
   min-height: 200px;
   margin-top: 1%;
@@ -470,7 +479,7 @@ main {
 
 .box-gbo__offer-image {
   width: 100%;
-
+  border-radius: 20px;
   transform: scale(1);
   transition: transform 1.5s;
 }
