--- a/styles/main.scss
+++ b/styles/main.scss
@@ -133,6 +133,8 @@ $colorMainPhrase: #303945;
 
 $colorAvtoMark: #424242;
 
+$colorMainText: #8c8c8c;
+
 .box-header-wrapper, .box-footer-wrappen {
 
   width: 100%;
@@ -199,7 +201,7 @@ $colorAvtoMark: #424242;
 .sub-header__bread {
   width: 100%;
   height: 20px;
-  border: 1px solid red;
+  //border: 1px solid red;
   margin-top: 10px;
   font-size: 16px;
 }
@@ -362,10 +364,15 @@ main {
 .box-avtoModdel__img {
 
   width: 300px;
-  height: 200px;
+  min-height: 200px;
   margin-top: 5%;
   background-color: $colorbgTextBloc;
-  //border: 1px solid black;
+  border: 1px solid black;
+
+  -webkit-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
+
 }
 
 .box-avtoModdel__name {
@@ -498,4 +505,76 @@ main {
   black -2px 2px 0,
   black 2px -2px 0;
 
+}
+
+
+///////////////////  SLIDER OFFERS
+
+
+.box-sliderOffers {
+  width: 100%;
+  margin-top: 3%;
+}
+
+.box-sliderOffers__items {
+  width: 100%;
+  height: 300px;
+  background-size:cover;
+}
+
+.box-sliderOffers__item {
+  position: relative;
+  width: 100%;
+  max-height: 200px;      ////* подогнать под минимальную высоту фотки*/
+  background-size:cover;  ////
+  overflow: hidden;
+}
+
+
+//////////////////// Index PORTFOLIO
+
+.box-porfolio{
+  width: 100%;
+  //height: 1000px;
+  //border: 1px solid #000;
+}
+
+.box-porfolioText{
+  width: 100%;
+  //border: 1px solid #000;
+}
+
+.box-porfolioText__phrase{
+  width: 100%;
+  margin: 2% 0;
+
+  text-align: center;
+  font-size: 23px;
+  color: #000;
+}
+
+.box-porfolioText__textAbout{
+  display: block;
+  margin: 2%;
+  font-size: 16px;
+  color: $colorMainText;
+  //background-color: $colorbgTextBloc;
+}
+
+
+.box-porfolioImg{
+  width: 100%;
+  border-radius: 20px;
+}
+
+.box-porfolioImg__image{
+  width: 100%;
+  margin: 1% 0;
+
+  border-radius: 20px;
+  height: auto;
+
+  -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
 }
