--- a/styles/main.css
+++ b/styles/main.css
@@ -311,9 +311,6 @@ main {
   margin-top: 5%;
   background-color: #e6e6e6;
   border: 1px solid black;
-  -webkit-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
-  -moz-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
-  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
 }
 
 .box-avtoModdel__name {
@@ -397,10 +394,6 @@ main {
   width: 100%;
   min-height: 200px;
   margin: 4% 0;
-  border-radius: 20px;
-  -webkit-box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
   background-color: #e6e6e6;
   border: 1px solid #000;
   overflow: hidden;
@@ -408,7 +401,6 @@ main {
 
 .box-gbo__offer-image {
   width: 100%;
-  border-radius: 20px;
   transform: scale(1);
   transition: transform 1.5s;
 }
@@ -421,7 +413,8 @@ main {
   font-weight: bold;
   color: #fff;
   text-transform: uppercase;
-  text-shadow: black 2px 2px 0, black -2px -2px 0, black -2px 2px 0, black 2px -2px 0;
+  padding: 2px;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .box-sliderOffers {
@@ -476,7 +469,4 @@ main {
   margin: 1% 0;
   border-radius: 20px;
   height: auto;
-  -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
 }
