--- a/styles/main.scss
+++ b/styles/main.scss
@@ -125,6 +125,9 @@ ul, li {
 ///////////////////
 
 $colorbg: #2e64fe;
+
+
+
 $colorbgTextBloc: #e6e6e6;
 
 $colorCrumbs: #727272;
@@ -369,9 +372,9 @@ main {
   background-color: $colorbgTextBloc;
   border: 1px solid black;
 
-  -webkit-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
-  -moz-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
-  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
+  //-webkit-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
+  //-moz-box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
+  //box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.35);
 
 }
 
@@ -472,11 +475,11 @@ main {
   width: 100%;
   min-height: 200px;
   margin: 4% 0;
-  border-radius: 20px;
-
-  -webkit-box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
+  //border-radius: 20px;
+  //
+  //-webkit-box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
+  //-moz-box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
+  //box-shadow: 0 0 15px 2px rgba(0, 0, 0, 0.75);
 
   background-color: $colorbgTextBloc;
   border: 1px solid #000;
@@ -486,7 +489,7 @@ main {
 
 .box-gbo__offer-image {
   width: 100%;
-  border-radius: 20px;
+  //border-radius: 20px;
   transform: scale(1);
   transition: transform 1.5s;
 }
@@ -500,10 +503,14 @@ main {
   font-weight: bold;
   color: #fff;
   text-transform: uppercase;
-  text-shadow: black 2px 2px 0,
-  black -2px -2px 0,
-  black -2px 2px 0,
-  black 2px -2px 0;
+  //text-shadow: black 2px 2px 0,
+  //black -2px -2px 0,
+  //black -2px 2px 0,
+  //black 2px -2px 0;
+
+  padding: 2px;
+  //border: 5px solid $colorbg;
+  background: rgba(0,0,0, 0.5);
 
 }
 
@@ -573,8 +580,8 @@ main {
 
   border-radius: 20px;
   height: auto;
-
-  -webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
-  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+  //
+  //-webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+  //-moz-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
+  //box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.75);
 }
