--- a/styles/main.scss
+++ b/styles/main.scss
@@ -325,13 +325,15 @@ main {
 ///////////////////// SLIDER 1 GBO
 
 .box-sliderOne {
+  //position: relative;
   width: 100%;
   margin-top: 3%;
+  //overflow: hidden;
 }
 
 .box-sliderOne__items {
   width: 100%;
-  height: 300px;
+  height: 200px;
   background-size:cover;
 }
 
