--- a/styles/main.css
+++ b/styles/main.css
@@ -119,7 +119,7 @@ ul, li {
 
 .box-header-wrapper, .box-footer-wrappen {
   width: 100%;
-  min-width: 476px;
+  min-width: 250px;
   min-height: 108px;
   z-index: 100;
   color: #fff;
@@ -128,7 +128,7 @@ ul, li {
 .mainWrappen {
   padding: 0;
   margin: 0;
-  min-width: 476px;
+  min-width: 250px;
   position: relative;
   overflow: hidden;
   min-height: 100%;
@@ -142,7 +142,6 @@ ul, li {
 
 .sub-header__container {
   width: 100%;
-  background-color: #2e64fe;
 }
 
 .sub-header__nav {
@@ -156,8 +155,11 @@ ul, li {
   float: left;
   margin: 0 auto;
   width: calc(100% / 6);
-  height: 30px;
+  height: 100%;
   line-height: 2;
+  overflow: hidden;
+  background-color: #2e64fe;
+  border: 1px solid #000;
 }
 
 .sub-header__item a {
