--- a/styles/main.scss
+++ b/styles/main.scss
@@ -141,7 +141,7 @@ $colorMainText: #8c8c8c;
 .box-header-wrapper, .box-footer-wrappen {
 
   width: 100%;
-  min-width: 476px; ///////// &&&
+  min-width: 250px; ///////// &&&
   min-height: 108px;
 
   z-index: 100;
@@ -151,7 +151,7 @@ $colorMainText: #8c8c8c;
 .mainWrappen {
   padding: 0;
   margin: 0;
-  min-width: 476px; ///////// &&&
+  min-width: 250px; ///////// &&&
   position: relative;
   overflow: hidden;
   min-height: 100%;
@@ -166,7 +166,7 @@ $colorMainText: #8c8c8c;
 
 .sub-header__container {
   width: 100%;
-  background-color: $colorbg;
+
 }
 
 .sub-header__nav {
@@ -184,10 +184,15 @@ $colorMainText: #8c8c8c;
   float: left;
   margin: 0 auto;
   width: calc(100% / 6);
-  height: 30px;
+  //height: 30px;
+  height: 100%;
   line-height: 2;
+  overflow: hidden;
+  background-color: $colorbg;
+  border: 1px solid #000;
 
   a {
+
     display: inline-block;
     width: 100%;
     height: 100%;
