--- a/styles/main.css
+++ b/styles/main.css
@@ -307,6 +307,13 @@ main {
   width: 100%;
 }
 
+.box-avtoModdel__link {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
+
 .box-avtoModdel__img {
   width: 300px;
   min-height: 200px;
