--- a/styles/main.scss
+++ b/styles/main.scss
@@ -371,11 +371,20 @@ main {
   //border: 1px solid red;
 }
 
+.box-avtoModdel__link{
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: 100%;
+}
+
+
 .box-avtoModdel__img {
 
   width: 300px;
   min-height: 200px;
   margin-top: 5%;
+  //margin: 1% auto;
   background-color: $colorbgTextBloc;
   border: 1px solid black;
 
